@@ -56,16 +56,19 @@ In addition to the pixel information that is provided in the Pixel
 Toolbar, mrViewer also supports a Color Area Window that displays color
 information about the currently selected area.<br>
 
-For the window to display any information, you need to have an image or
-movie loaded, open the color area window (or vectorscope or histogram) and select an area of it with the
-<div class="hotkey">LMB</div>
-
-.<br>
-
 The Color Area window displays the coordinates of the rectangle area
 selected, its&nbsp;width and height in pixels as well as its total
 size
 in pixels.<br>
+
+For the window to display any information, you need to make sure you are in area select mode, go to the 
+<a href="paint.html"><div class="menu">Paint Window</div></a> and select the first tool (the square).
+<br>
+With the select tool you need to have an image or
+movie loaded, and select an area of it with the <div class="hotkey">LMB</div>
+.<br>
+The area can be just a point to remove the square from view.<br>
+
 
 The information displayed are the minimum and maximum values of the
 Red, Green, Blue and Alpha channels for the currently selected layer
