@@ -2,8 +2,9 @@ v2.6.4.1 - Made autofit work in EDL timeline when switching images.
 	 - Fixed loading of a single image which would always load all images
 	   in a sequence.
 	 - Fixed BG image and wipe mode in network connections.
-	 - Bug fixed color area window selection and added a square
+	 - Bug fixed color area window selection in stereo and added a square
 	   displaying the mean color in the color info window.
+	 - Bug fixed timeline of audio files that have a presentation picture.
 v2.6.4.0 - Added a starting audio volume preference to the default 
 	   audio preferences.
 	 - Made preferences run when the user hits ok.  Previously ok did
